
- Modified the SMTP protocol module to export the SASL authentication
  information internally.

- Modified the check-fqdn plugin to append $DEFAULTHOST and
  $DEFAULTDOMAIN to addresses if necessary.

- Added separate connect and send timeouts and a maximum message size to
  the ClamAV plugin, and fixed a bug with handling port numbers when
  using multiple IPs.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.10

- Added a ClamAV virus scanner plugin.  Note: Using this plugin will
  cause mailfront to save messages to temporary files.  See
  mailfront.html for details.

- Modified the plugin API to add a version code, a flags word, and to
  (optionally) save messages to a temporary file.

- Fixed a few cases where the UCSPI-TCP protocol was assumed.

- Fixed pop3front-maildir breakage on dietlibc/uClibc and empty
  maildirs.  Thanks Wayne Marshall.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.01

- Fixed a bug in the counters plugin that triggered a problem in the
  SMTP protocol when handling the SIZE=# parameter.

- Reversed the order of cvm-validate and qmail-validate in the wrapper
  scripts (and documentation) due to the semantics of the two plugins.

- Added a list of built-in plugins.  The list currently contains the
  three accept* plugins, which are extremely trivial.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.0

Mailfront has been rewritten to be totally modular.  The core mailfront